# any-sketch

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build-test.yml
src/main/cc/any_sketch/: BUILD.bazel  aggregators.cc  any_sketch.cc  any_sketch.h  distributions.cc  distributions.h  fingerprinters.cc  value_function.h
src/main/cc/any_sketch/crypto/: BUILD.bazel  key_combiner_main.cc  secret_share.cc  secret_share.h  secret_share_generator.cc  secret_share_generator.h  shuffle.cc  shuffle.h  sketch_encrypter.cc  sketch_encrypter.h  sketch_encrypter_adapter.cc
src/main/cc/any_sketch/fingerprinters/: BUILD.bazel  fingerprinters.cc  fingerprinters.h
src/main/cc/crypto/: BUILD.bazel  shuffle.cc  shuffle.h
src/main/cc/estimation/: BUILD.bazel  estimators.cc  estimators.h
src/main/cc/frequency_count/: BUILD.bazel  generate_secret_shares.cc  generate_secret_shares.h  secret_share_generator.cc  secret_share_generator.h  secret_share_generator_adapter.cc  secret_share_generator_adapter.h
src/main/cc/math/: BUILD.bazel  distributed_discrete_gaussian_noiser.cc  distributed_discrete_gaussian_noiser.h  distributed_discrete_gaussian_random_noise.cc  distributed_discrete_gaussian_random_noise.h  distributed_gaussian_random_noise.cc  distributed_gaussian_random_noise.h  distributed_geometric_noiser.cc  distributed_geometric_noiser.h  distributed_geometric_random_noise.cc  distributed_geometric_random_noise.h  distributed_noiser.h  distributed_random_noise.h  distributions.cc  distributions.h  expint.h  noise_parameters_computation.cc  noise_parameters_computation.h  open_ssl_uniform_random_generator.cc  open_ssl_uniform_random_generator.h  openssl_random_generator.cc  openssl_random_generator.h  uniform_pseudorandom_generator.h
src/main/proto/wfa/any_sketch/: BUILD.bazel  differential_privacy.proto  secret_share.proto  share_shuffle_sketch.proto  sketch.proto
src/main/proto/wfa/any_sketch/crypto/: BUILD.bazel  el_gamal_key.proto  sketch_encryption_methods.proto
src/main/proto/wfa/frequency_count/: BUILD.bazel  frequency_vector.proto  secret_share.proto  secret_share_methods.proto  share_shuffle_methods.proto  share_shuffle_sketch.proto
src/test/cc/any_sketch/: BUILD.bazel  aggregators_test.cc  any_sketch_test.cc  distributions_test.cc
src/test/cc/any_sketch/crypto/: BUILD.bazel  secret_share_generator_test.cc  secret_share_test.cc  shuffle_test.cc  sketch_encrypter_adapter_test.cc  sketch_encrypter_test.cc
src/test/cc/any_sketch/fingerprinters/: BUILD.bazel  fingerprinters_test.cc
src/test/cc/crypto/: BUILD.bazel  shuffle_test.cc
src/test/cc/estimation/: BUILD.bazel  estimators_test.cc
src/test/cc/frequency_count/: BUILD.bazel  generate_secret_shares_test.cc  secret_share_generator_adapter_test.cc  secret_share_generator_test.cc
src/test/cc/math/: BUILD.bazel  distributed_discrete_gaussian_noiser_test.cc  distributed_discrete_gaussian_random_noise_test.cc  distributed_gaussian_random_noise_test.cc  distributed_geometric_noiser_test.cc  distributed_geometric_random_noise_test.cc  distributions_test.cc  expint_test.cc  noise_parameters_computation_test.cc  open_ssl_uniform_random_generator_test.cc
