module(
    name = "any-sketch",
    repo_name = "any_sketch",
)

BORINGSSL_VERSION = "0.0.0-20230215-5c22014"

# Bazel Central Registry modules.
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20230802.0.bcr.1",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googletest",
    version = "1.14.0",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "glog",
    version = "0.6.0",
    repo_name = "com_github_google_glog",
)
bazel_dep(
    name = "boringssl",
    version = BORINGSSL_VERSION,
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)

# WFA registry modules.
bazel_dep(
    name = "common-cpp",
    version = "0.11.0",
    repo_name = "wfa_common_cpp",
)
bazel_dep(
    name = "private-join-and-compute",
    version = "0.0.0-20230417-e028e59",
    repo_name = "com_google_private_join_and_compute",
)

single_version_override(
    module_name = "boringssl",
    version = BORINGSSL_VERSION,
)
