package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc/"

cc_library(
    name = "any_sketch",
    srcs = ["any_sketch.cc"],
    hdrs = ["any_sketch.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":aggregators",
        ":distributions",
        ":value_function",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@wfa_common_cpp//src/main/cc/common_cpp/fingerprinters",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_library(
    name = "aggregators",
    srcs = ["aggregators.cc"],
    hdrs = ["aggregators.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_github_google_glog//:glog",
    ],
)

cc_library(
    name = "distributions",
    srcs = ["distributions.cc"],
    hdrs = ["distributions.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@wfa_common_cpp//src/main/cc/common_cpp/fingerprinters",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_library(
    name = "value_function",
    hdrs = ["value_function.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":aggregators",
        ":distributions",
        "@com_google_absl//absl/strings",
    ],
)
