package(default_visibility = ["//visibility:public"])

cc_library(
    name = "estimators",
    srcs = ["estimators.cc"],
    hdrs = ["estimators.h"],
    strip_include_prefix = "/src/main/cc/",
    deps = [
        "//src/main/cc/math:expint",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/functional:bind_front",
    ],
)
