load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "distributed_noiser",
    hdrs = [
        "distributed_noiser.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "open_ssl_uniform_random_generator",
    srcs = ["open_ssl_uniform_random_generator.cc"],
    hdrs = [
        "open_ssl_uniform_random_generator.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@boringssl//:ssl",
    ],
)

cc_library(
    name = "distributed_geometric_noiser",
    srcs = [
        "distributed_geometric_noiser.cc",
    ],
    hdrs = [
        "distributed_geometric_noiser.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":distributed_noiser",
        ":open_ssl_uniform_random_generator",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/status:statusor",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_library(
    name = "distributed_discrete_gaussian_noiser",
    srcs = [
        "distributed_discrete_gaussian_noiser.cc",
    ],
    hdrs = [
        "distributed_discrete_gaussian_noiser.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":distributed_noiser",
        ":open_ssl_uniform_random_generator",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/status:statusor",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_library(
    name = "noise_parameters_computation",
    srcs = [
        "noise_parameters_computation.cc",
    ],
    hdrs = [
        "noise_parameters_computation.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":distributed_discrete_gaussian_noiser",
        ":distributed_geometric_noiser",
        ":distributed_noiser",
        "//src/main/proto/wfa/any_sketch:differential_privacy_cc_proto",
    ],
)

cc_library(
    name = "expint",
    hdrs = [
        "expint.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "//third_party/llvm-project/libcxx/include/expint",
    ],
)
