cc_test(
    name = "any_sketch_test",
    size = "small",
    srcs = ["any_sketch_test.cc"],
    deps = [
        "//src/main/cc/any_sketch",
        "//src/main/cc/any_sketch:aggregators",
        "//src/main/cc/any_sketch:distributions",
        "//src/main/cc/any_sketch:value_function",
        "@com_google_absl//absl/container:fixed_array",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "aggregators_test",
    size = "small",
    srcs = ["aggregators_test.cc"],
    deps = [
        "//src/main/cc/any_sketch:aggregators",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "distributions_test",
    size = "small",
    srcs = ["distributions_test.cc"],
    deps = [
        "//src/main/cc/any_sketch:distributions",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
