cc_test(
    name = "secret_share_generator_test",
    size = "small",
    srcs = [
        ":secret_share_generator_test.cc",
    ],
    deps = [
        "//src/main/cc/frequency_count:secret_share_generator",
        "//src/main/cc/math:open_ssl_uniform_random_generator",
        "//src/main/proto/wfa/frequency_count:secret_share_cc_proto",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "secret_share_generator_adapter_test",
    size = "small",
    srcs = [":secret_share_generator_adapter_test.cc"],
    deps = [
        "//src/main/cc/frequency_count:secret_share_generator_adapter",
        "//src/main/cc/math:open_ssl_uniform_random_generator",
        "//src/main/proto/wfa/frequency_count:secret_share_cc_proto",
        "//src/main/proto/wfa/frequency_count:share_shuffle_methods_cc_proto",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
