load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "noise_parameters_computation_test",
    size = "small",
    srcs = [
        "noise_parameters_computation_test.cc",
    ],
    deps = [
        "//src/main/cc/math:noise_parameters_computation",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "distributions_test",
    size = "small",
    srcs = [
        "distributions_test.cc",
    ],
    deps = [
        "//src/main/cc/math:distributions",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "expint_test",
    size = "small",
    srcs = [
        "expint_test.cc",
    ],
    deps = [
        "//src/main/cc/math:expint",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
