load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "noise_parameters_computation_test",
    size = "small",
    srcs = [
        "noise_parameters_computation_test.cc",
    ],
    deps = [
        "//src/main/cc/math:noise_parameters_computation",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "distributed_geometric_random_noise_test",
    size = "small",
    srcs = [
        "distributed_geometric_random_noise_test.cc",
    ],
    deps = [
        "//src/main/cc/math:distributed_geometric_random_noise",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "distributed_discrete_gaussian_random_noise_test",
    size = "small",
    srcs = [
        "distributed_discrete_gaussian_random_noise_test.cc",
    ],
    deps = [
        "//src/main/cc/math:distributed_discrete_gaussian_random_noise",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
