load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "noise_parameters_computation_test",
    size = "small",
    srcs = [
        "noise_parameters_computation_test.cc",
    ],
    deps = [
        "//src/main/cc/math:noise_parameters_computation",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "distributed_geometric_noiser_test",
    size = "small",
    srcs = [
        "distributed_geometric_noiser_test.cc",
    ],
    deps = [
        "//src/main/cc/math:distributed_geometric_noiser",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@com_google_absl//absl/status:statusor",
        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_test(
    name = "distributed_discrete_gaussian_noiser_test",
    size = "small",
    srcs = [
        "distributed_discrete_gaussian_noiser_test.cc",
    ],
    deps = [
        "//src/main/cc/math:distributed_discrete_gaussian_noiser",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@wfa_common_cpp//src/main/cc/common_cpp/macros",
    ],
)

cc_test(
    name = "open_ssl_uniform_random_generator_test",
    size = "small",
    srcs = [
        "open_ssl_uniform_random_generator_test.cc",
    ],
    deps = [
        "//src/main/cc/math:open_ssl_uniform_random_generator",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)
