package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fingerprinters",
    srcs = ["fingerprinters.cc"],
    hdrs = ["fingerprinters.h"],
    deps = [
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@farmhash",
    ],
)
