load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "sketch_proto",
    srcs = ["sketch.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

cc_proto_library(
    name = "sketch_cc_proto",
    deps = [":sketch_proto"],
)

proto_library(
    name = "differential_privacy_proto",
    srcs = ["differential_privacy.proto"],
    strip_import_prefix = "/src/main/proto",
)

cc_proto_library(
    name = "differential_privacy_cc_proto",
    deps = [":differential_privacy_proto"],
)

proto_library(
    name = "secret_share_proto",
    srcs = ["secret_share.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

cc_proto_library(
    name = "secret_share_cc_proto",
    deps = [":secret_share_proto"],
)