cc_test(
    name = "sketch_encrypter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:random",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "sketch_encrypter_adapter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_adapter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter_adapter",
        "//src/main/proto/wfa/any_sketch:sketch_cc_proto",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:random",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "secret_share_test",
    size = "small",
    srcs = [
        ":secret_share_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:secret_share",
        "//src/main/proto/wfa/any_sketch:secret_share_cc_proto",
        "//src/main/cc/math:open_ssl_uniform_random_generator",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)