cc_test(
    name = "sketch_encrypter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:random",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@boringssl//:ssl",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "sketch_encrypter_adapter_test",
    size = "small",
    srcs = [
        ":sketch_encrypter_adapter_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:sketch_encrypter_adapter",
        "//src/main/proto/wfa/any_sketch:sketch_cc_proto",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:random",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@boringssl//:crypto",
        "@com_google_protobuf//:protobuf",
        "//src/main/proto/wfa/any_sketch/crypto:el_gamal_key_cc_proto",
        "//src/main/proto/wfa/any_sketch/crypto:sketch_encryption_methods_cc_proto",
        "@com_google_private_join_and_compute//private_join_and_compute/crypto:commutative_elgamal",
    ],
)

cc_test(
    name = "secret_share_generator_test",
    size = "small",
    srcs = [
        ":secret_share_generator_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:secret_share_generator",
        "//src/main/cc/math:open_ssl_uniform_random_generator",
        "//src/main/proto/wfa/any_sketch:secret_share_cc_proto",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",

        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "shuffle_test",
    size = "small",
    srcs = [
        "shuffle_test.cc",
    ],
    deps = [
        "//src/main/cc/any_sketch/crypto:shuffle",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "//src/main/cc/any_sketch/crypto:secret_share_generator",
        "//src/main/cc/math:open_ssl_uniform_random_generator",
    ],
)
