load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "sketch_encryption_methods_proto",
    srcs = ["sketch_encryption_methods.proto"],
    strip_import_prefix = "/src/main/proto",
    deps = [
        "//src/main/proto/wfa/any_sketch:sketch_proto",
        "//src/main/proto/wfa/common:el_gamal_key_proto",
    ],
)

cc_proto_library(
    name = "sketch_encryption_methods_cc_proto",
    deps = [":sketch_encryption_methods_proto"],
)
